added aws badge

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     />
                   </a>
                   <a
-                    href="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/work-in-progress-design-template-6cc0b86afbb81d0528f26113e3ec02cf_screen.jpg?ts=1698307882"
+                    href="https://www.credly.com/badges/a17e6e03-02e3-493e-8c41-aab2cc269a5b/linked_in_profile"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="flex items-center hover:scale-105 transition-transform"
@@ -636,9 +636,7 @@
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Advanced Calculus</h4>
-                  <p class="text-sm text-gray-400 mt-1">
-                    Mathematical analysis
-                  </p>
+                  <p class="text-sm text-gray-400 mt-1">Real analysis</p>
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
