--- a/index.html
+++ b/index.html
@@ -558,6 +558,34 @@
               >
                 <!-- Each course tile -->
                 <div class="bg-gray-800/70 p-3 rounded-lg">
+                  <h4 class="font-semibold">Networks</h4>
+                  <p class="text-sm text-gray-400 mt-1">
+                    Protocols, internet, OSI model, subnetting
+                  </p>
+                </div>
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
+                  <h4 class="font-semibold">Cryptography</h4>
+                  <p class="text-sm text-gray-400 mt-1">
+                    Encryption, hashes, number theory, digital signatures
+                  </p>
+                </div>
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
+                  <h4 class="font-semibold">Computer & Network Security</h4>
+                  <p class="text-sm text-gray-400 mt-1">
+                    Attacks, encryption, authentication, protocols
+                  </p>
+                </div>
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
+                  <h4 class="font-semibold">Computer Systems</h4>
+                  <p class="text-sm text-gray-400 mt-1">
+                    Low-level system architecture
+                  </p>
+                </div>
+
+                <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Object-Oriented Programming</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     OOP principles and design
@@ -581,7 +609,7 @@
                 <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Data Science</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Data analysis techniques
+                    Data analysis, data mining, and machine learning
                   </p>
                 </div>
 
@@ -595,23 +623,9 @@
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Networks</h4>
+                  <h4 class="font-semibold">The Coding Interview</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Computer networks and protocols
-                  </p>
-                </div>
-
-                <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Cryptography</h4>
-                  <p class="text-sm text-gray-400 mt-1">
-                    Encryption and security protocols
-                  </p>
-                </div>
-
-                <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Computer Systems</h4>
-                  <p class="text-sm text-gray-400 mt-1">
-                    Low-level system architecture
+                    Leetcode and behavioral interview practice
                   </p>
                 </div>
 
@@ -661,7 +675,7 @@
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Advanced Linear Algebra</h4>
+                  <h4 class="font-semibold">Applications of Linear Algebra</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Advanced matrix theory
                   </p>
@@ -675,21 +689,9 @@
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">The Coding Interview</h4>
+                  <h4 class="font-semibold">Technical Writing</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Leetcode and behavioral interview practice
-                  </p>
-                </div>
-
-                <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Academic Writing</h4>
-                  <p class="text-sm text-gray-400 mt-1">Rhetoric in writing</p>
-                </div>
-
-                <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Astronomy</h4>
-                  <p class="text-sm text-gray-400 mt-1">
-                    Sun, moon, planets, stars, nebulae, galaxies
+                    Writing technical papers and reports
                   </p>
                 </div>
               </div>
