--- a/index.html
+++ b/index.html
@@ -676,9 +676,7 @@
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Applications of Linear Algebra</h4>
-                  <p class="text-sm text-gray-400 mt-1">
-                    Advanced matrix theory
-                  </p>
+                  <p class="text-sm text-gray-400 mt-1">Physics applications</p>
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
