--- a/index.html
+++ b/index.html
@@ -553,67 +553,93 @@
                 University of Maryland - Computer Science and Mathematics
               </h3>
 
+              <!-- Filter Buttons -->
+              <div class="flex justify-center gap-4 mb-6">
+                <button
+                  id="all-btn"
+                  class="filter-btn active"
+                  onclick="filterCourses('all')"
+                >
+                  All Courses
+                </button>
+                <button
+                  id="cs-btn"
+                  class="filter-btn"
+                  onclick="filterCourses('cs')"
+                >
+                  Computer Science
+                </button>
+                <button
+                  id="math-btn"
+                  class="filter-btn"
+                  onclick="filterCourses('math')"
+                >
+                  Mathematics
+                </button>
+              </div>
+
               <div
+                id="courses-container"
                 class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mt-6"
               >
-                <!-- Each course tile -->
-                <div class="bg-gray-800/70 p-3 rounded-lg">
+                <!-- Computer Science Courses -->
+                <div class="course-tile cs-course">
                   <h4 class="font-semibold">Networks</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Protocols, internet, OSI model, subnetting
                   </p>
                 </div>
 
-                <div class="bg-gray-800/70 p-3 rounded-lg">
+                <div class="course-tile cs-course">
                   <h4 class="font-semibold">Cryptography</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Encryption, hashes, number theory, digital signatures
                   </p>
                 </div>
 
-                <div class="bg-gray-800/70 p-3 rounded-lg">
+                <div class="course-tile cs-course">
                   <h4 class="font-semibold">Computer & Network Security</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Attacks, encryption, authentication, protocols
+                    Attacks, encryption, authentication
                   </p>
                 </div>
 
-                <div class="bg-gray-800/70 p-3 rounded-lg">
+                <div class="course-tile cs-course">
                   <h4 class="font-semibold">Computer Systems</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Low-level system architecture
                   </p>
                 </div>
 
-                <div class="bg-gray-800/70 p-3 rounded-lg">
+                <div class="course-tile cs-course">
                   <h4 class="font-semibold">Object-Oriented Programming</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     OOP principles and design
                   </p>
                 </div>
 
-                <div class="bg-gray-800/70 p-3 rounded-lg">
+                <div class="course-tile cs-course">
                   <h4 class="font-semibold">Data Structures</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Fundamental data organization
                   </p>
                 </div>
 
-                <div class="bg-gray-800/70 p-3 rounded-lg">
+                <div class="course-tile cs-course">
                   <h4 class="font-semibold">Algorithms</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Problem-solving methods
                   </p>
                 </div>
 
-                <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Data Science</h4>
+                <div class="course-tile math-course cs-course">
+                  <h4 class="font-semibold">Discrete Math</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Data analysis, data mining, and machine learning
+                    Logic, sets, relations, graphs, proof writing
                   </p>
                 </div>
 
-                <div class="bg-gray-800/70 p-3 rounded-lg">
+                <div class="course-tile cs-course">
                   <h4 class="font-semibold">
                     Organization of Programming Languages
                   </h4>
@@ -622,75 +648,83 @@
                   </p>
                 </div>
 
-                <div class="bg-gray-800/70 p-3 rounded-lg">
+                <div class="course-tile cs-course">
+                  <h4 class="font-semibold">Data Science</h4>
+                  <p class="text-sm text-gray-400 mt-1">
+                    Data analysis, data mining, and machine learning
+                  </p>
+                </div>
+
+                <div class="course-tile cs-course">
                   <h4 class="font-semibold">The Coding Interview</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Leetcode and behavioral interview practice
                   </p>
                 </div>
 
-                <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Calculus I</h4>
+                <div class="course-tile math-course cs-course">
+                  <h4 class="font-semibold">Computational Methods</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Differential calculus
+                    Methods for interpolation, approximation, ODEs
                   </p>
                 </div>
 
-                <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Calculus II</h4>
-                  <p class="text-sm text-gray-400 mt-1">Integral calculus</p>
-                </div>
-
-                <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Calculus III</h4>
-                  <p class="text-sm text-gray-400 mt-1">
-                    Multivariable calculus
-                  </p>
-                </div>
-
-                <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Advanced Calculus</h4>
-                  <p class="text-sm text-gray-400 mt-1">Real analysis</p>
-                </div>
-
-                <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Differential Equations</h4>
-                  <p class="text-sm text-gray-400 mt-1">
-                    Ordinary differential equations
-                  </p>
-                </div>
-
-                <div class="bg-gray-800/70 p-3 rounded-lg">
+                <!-- Mathematics Courses -->
+                <div class="course-tile math-course">
                   <h4 class="font-semibold">Statistics</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Probability, distributions, statistical inference
                   </p>
                 </div>
 
-                <div class="bg-gray-800/70 p-3 rounded-lg">
+                <div class="course-tile math-course">
+                  <h4 class="font-semibold">Calculus I</h4>
+                  <p class="text-sm text-gray-400 mt-1">
+                    Differential calculus
+                  </p>
+                </div>
+
+                <div class="course-tile math-course">
+                  <h4 class="font-semibold">Calculus II</h4>
+                  <p class="text-sm text-gray-400 mt-1">Integral calculus</p>
+                </div>
+
+                <div class="course-tile math-course">
+                  <h4 class="font-semibold">Calculus III</h4>
+                  <p class="text-sm text-gray-400 mt-1">
+                    Multivariable calculus
+                  </p>
+                </div>
+
+                <div class="course-tile math-course">
+                  <h4 class="font-semibold">Advanced Calculus</h4>
+                  <p class="text-sm text-gray-400 mt-1">Real analysis</p>
+                </div>
+
+                <div class="course-tile math-course">
+                  <h4 class="font-semibold">Differential Equations</h4>
+                  <p class="text-sm text-gray-400 mt-1">
+                    Ordinary differential equations
+                  </p>
+                </div>
+
+                <div class="course-tile math-course">
+                  <h4 class="font-semibold">Number Theory</h4>
+                  <p class="text-sm text-gray-400 mt-1">
+                    Integers, prime numbers, congruences
+                  </p>
+                </div>
+
+                <div class="course-tile math-course">
                   <h4 class="font-semibold">Linear Algebra</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Vector spaces and matrices
                   </p>
                 </div>
 
-                <div class="bg-gray-800/70 p-3 rounded-lg">
+                <div class="course-tile math-course">
                   <h4 class="font-semibold">Applications of Linear Algebra</h4>
                   <p class="text-sm text-gray-400 mt-1">Physics applications</p>
-                </div>
-
-                <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Discrete Math</h4>
-                  <p class="text-sm text-gray-400 mt-1">
-                    Logic, sets, relations, graphs, proof writing
-                  </p>
-                </div>
-
-                <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Technical Writing</h4>
-                  <p class="text-sm text-gray-400 mt-1">
-                    Writing technical papers and reports
-                  </p>
                 </div>
               </div>
             </div>
