--- a/index.html
+++ b/index.html
@@ -161,6 +161,15 @@
                       >Nmap</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Gobuster</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Hydra</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Burpsuite</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Wireshark</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
@@ -216,13 +225,6 @@
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Tidyverse</span
-                    >
-
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >ChatGPT</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >DeepSeek</span
                     >
                   </div>
                 </div>
