--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Tidyverse</span
                     >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Seaborn</span
+                    >
                   </div>
                 </div>
 
@@ -537,9 +540,8 @@
                   </a>
                 </div>
 
-                <!-- More Projects Button-->
                 <div class="mt-3 md:col-span-2 flex justify-center">
-                  <a href="projects.html" class="neon-button">More Projects</a>
+                  <a href="projects.html" class="filter-btn">More Projects</a>
                 </div>
               </div>
             </div>
