--- a/aboutme.html
+++ b/aboutme.html
@@ -47,7 +47,7 @@
         <div class="black-content-box">
           <!-- Go Back Button (now outside the black box) -->
           <div class="text-center my-6">
-            <a href="index.html" class="neon-button">Home</a>
+            <a href="index.html" class="filter-btn">Home</a>
           </div>
 
           <br />
@@ -112,10 +112,13 @@
                       >Running</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Going on drives</span
+                      >Skateboarding</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Photography</span
+                      >Writing</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Piano</span
                     >
                   </div>
                 </div>
