--- a/writing.html
+++ b/writing.html
@@ -57,7 +57,7 @@
           <div class="black-content-box">
             <br />
             <div class="text-center my-6">
-              <a href="index.html" class="neon-button">Home</a>
+              <a href="index.html" class="filter-btn">Home</a>
             </div>
             <br />
 
