--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                   </p>
                 </div>
 
-                <div class="course-tile cs-course">
+                <div class="course-tile cs-course math-course">
                   <h4 class="font-semibold">Cryptography</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Encryption, hashes, number theory, digital signatures
