--- a/writing.html
+++ b/writing.html
@@ -29,7 +29,7 @@
       <div id="pdf-viewer-section" class="hidden my-6 px-4">
         <div class="black-box">
           <div class="text-center my-6">
-            <a href="writing.html" class="neon-button">Back to All Samples</a>
+            <a href="writing.html" class="filter-btn">Back to All Samples</a>
           </div>
           <div class="flex justify-center">
             <iframe id="pdf-viewer" class="pdf-container"></iframe>
