--- a/writing.html
+++ b/writing.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Daniel Son - Writing Samples</title>
+    <title>Daniel Son - Writing</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.12.313/pdf.min.js"></script>
@@ -16,7 +16,7 @@
       <nav class="matrix-nav">
         <a href="index.html" class="matrix-link">Home</a>
         <a href="aboutme.html" class="matrix-link">About Me</a>
-        <a href="writing.html" class="matrix-link">Writing Samples</a>
+        <a href="writing.html" class="matrix-link">Writing</a>
         <a href="projects.html" class="matrix-link">Projects</a>
       </nav>
       <a href="index.html" class="matrix-glow">Daniel Son</a>
@@ -29,7 +29,7 @@
       <div id="pdf-viewer-section" class="hidden my-6 px-4">
         <div class="black-box">
           <div class="text-center my-6">
-            <a href="writing.html" class="filter-btn">Back to All Samples</a>
+            <a href="writing.html" class="filter-btn">Back to All Writing</a>
           </div>
           <div class="flex justify-center">
             <iframe id="pdf-viewer" class="pdf-container"></iframe>
@@ -42,7 +42,7 @@
         <div
           class="h-screen flex flex-col justify-center items-center text-center"
         >
-          <h1 class="matrix-text">Writing Samples</h1>
+          <h1 class="matrix-text">Writing</h1>
           <div class="mt-4 typing-shadow">
             <img
               src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=24&pause=1500&color=FFFFFF&center=true&vCenter=true&width=500&
