--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Daniel Son</title>
+    <title>Daniel Son - About Me</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -15,7 +15,7 @@
       <nav class="matrix-nav">
         <a href="index.html" class="matrix-link">Home</a>
         <a href="aboutme.html" class="matrix-link">About Me</a>
-        <a href="writing.html" class="matrix-link">Writing Samples</a>
+        <a href="writing.html" class="matrix-link">Writing</a>
         <a href="projects.html" class="matrix-link">Projects</a>
       </nav>
       <a href="index.html" class="matrix-glow">Daniel Son</a>
