--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="matrix-nav">
         <a href="index.html" class="matrix-link">Home</a>
         <a href="aboutme.html" class="matrix-link">About Me</a>
-        <a href="writing.html" class="matrix-link">Writing Samples</a>
+        <a href="writing.html" class="matrix-link">Writing</a>
         <a href="projects.html" class="matrix-link">Projects</a>
       </nav>
       <a href="index.html" class="matrix-glow">Daniel Son</a>
