removed all classes section

--- a/index.html
+++ b/index.html
@@ -560,15 +560,8 @@
               <!-- Filter Buttons -->
               <div class="flex justify-center gap-4 mb-6">
                 <button
-                  id="all-btn"
-                  class="filter-btn active"
-                  onclick="filterCourses('all')"
-                >
-                  All Courses
-                </button>
-                <button
                   id="cs-btn"
-                  class="filter-btn"
+                  class="filter-btn active"
                   onclick="filterCourses('cs')"
                 >
                   Computer Science
@@ -684,7 +677,7 @@
                 <div class="course-tile math-course">
                   <h4 class="font-semibold">Calculus I</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Differential calculus
+                    Differential calculus<br /><br />
                   </p>
                 </div>
 
