fixed certification hitboxes

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                     href="https://www.credly.com/badges/6bc1b1ee-c569-4b9a-9c18-75e2a44e1c8c/public_url"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="hover:scale-105 transition-transform"
+                    class="hover:scale-105 transition-transform inline-block w-fit"
                   >
                     <img
                       src="https://img.shields.io/badge/Google_Cybersecurity-4285F4?style=for-the-badge&logo=google&logoColor=white"
@@ -272,7 +272,7 @@
                     href="https://www.credly.com/badges/44600edd-a72d-4115-bc9d-9077239cdb00/public_url"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="hover:scale-105 transition-transform"
+                    class="hover:scale-105 transition-transform inline-block w-fit"
                   >
                     <img
                       src="https://img.shields.io/badge/CompTIA_Security+-D50000?style=for-the-badge&logo=comptia&logoColor=white"
@@ -282,23 +282,27 @@
                     href="https://www.credly.com/badges/a17e6e03-02e3-493e-8c41-aab2cc269a5b/linked_in_profile"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="flex items-center hover:scale-105 transition-transform"
+                    class="hover:scale-105 transition-transform inline-block w-fit"
                   >
-                    <!-- Logo container styled to match badge height -->
-                    <div class="bg-[#FF9900] h-[28px] flex items-center px-1.5">
+                    <div class="flex items-center">
+                      <!-- Logo container styled to match badge height -->
+                      <div
+                        class="bg-[#FF9900] h-[28px] flex items-center px-1.5"
+                      >
+                        <img
+                          src="https://img.icons8.com/androidL/512/FFFFFF/amazon.png"
+                          alt="AWS Logo"
+                          class="h-4"
+                        />
+                      </div>
+
+                      <!-- Badge, pulled slightly closer -->
                       <img
-                        src="https://img.icons8.com/androidL/512/FFFFFF/amazon.png"
-                        alt="AWS Logo"
-                        class="h-4"
+                        src="https://img.shields.io/badge/AWS_Cloud_Practitioner-FF9900?style=for-the-badge&logoColor=white"
+                        alt="AWS Cloud Practitioner Badge"
+                        class="h-[28px] -ml-[7px]"
                       />
                     </div>
-
-                    <!-- Badge, pulled slightly closer -->
-                    <img
-                      src="https://img.shields.io/badge/AWS_Cloud_Practitioner-FF9900?style=for-the-badge&logoColor=white"
-                      alt="AWS Cloud Practitioner Badge"
-                      class="h-[28px] -ml-[7px]"
-                    />
                   </a>
                 </div>
               </div>
