--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         </div>
       </div>
 
-      <!-- Combined Black Box Section -->
+      <!-- Black Box Section -->
       <div class="my-12 px-4">
         <div class="black-content-box">
-          <!-- Socials at the top -->
+          <!-- Socials -->
           <br />
           <div class="flex flex-wrap justify-center gap-4 mb-8">
             <a
@@ -102,7 +102,7 @@
             <div class="lg:w-1/3 text-left">
               <h2 class="text-3xl font-bold mb-6">💼 My Toolkit</h2>
 
-              <!-- Compact Skills Section -->
+              <!-- Skills Section -->
               <div class="space-y-4">
                 <div>
                   <h3 class="text-xl font-semibold mb-2">Languages</h3>
@@ -285,7 +285,6 @@
                     class="hover:scale-105 transition-transform inline-block w-fit"
                   >
                     <div class="flex items-center">
-                      <!-- Logo container styled to match badge height -->
                       <div
                         class="bg-[#FF9900] h-[28px] flex items-center px-1.5"
                       >
@@ -296,7 +295,6 @@
                         />
                       </div>
 
-                      <!-- Badge, pulled slightly closer -->
                       <img
                         src="https://img.shields.io/badge/AWS_Cloud_Practitioner-FF9900?style=for-the-badge&logoColor=white"
                         alt="AWS Cloud Practitioner Badge"
@@ -735,7 +733,7 @@
           <br />
           <br />
 
-          <!-- GitHub Analytics at the bottom -->
+          <!-- GitHub Analytics -->
           <div>
             <h2 class="text-3xl font-bold mb-6 text-center">
               📊 GitHub Analytics
