--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
     <canvas id="canvas"></canvas>
 
     <div class="content-wrapper mx-auto">
-      <!-- Main Writing Samples Grid -->
+      <!-- Projects Grid -->
       <div id="samples-grid">
         <div
           class="h-screen flex flex-col justify-center items-center text-center"
@@ -53,7 +53,6 @@
             <div
               class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-8"
             >
-              <!-- Update all links to use URL parameters -->
               <!-- Project 1 -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
