--- a/aboutme.html
+++ b/aboutme.html
@@ -42,10 +42,10 @@
         </div>
       </div>
 
-      <!-- Combined Black Box Section -->
+      <!-- Black Box Section -->
       <div class="my-12 px-4">
         <div class="black-content-box">
-          <!-- Go Back Button (now outside the black box) -->
+          <!-- Go Back Button -->
           <div class="text-center my-6">
             <a href="index.html" class="filter-btn">Home</a>
           </div>
@@ -58,7 +58,7 @@
             <div class="lg:w-1/3 text-left">
               <h2 class="text-3xl font-bold mb-6">——————————————————</h2>
 
-              <!-- Compact Skills Section -->
+              <!-- Skills Section -->
               <div class="space-y-4">
                 <div>
                   <h3 class="text-xl font-semibold mb-2">Favorites</h3>
