--- a/writing.html
+++ b/writing.html
@@ -37,7 +37,7 @@
         </div>
       </div>
 
-      <!-- Main Writing Samples Grid -->
+      <!-- Writing Samples Grid -->
       <div id="samples-grid">
         <div
           class="h-screen flex flex-col justify-center items-center text-center"
@@ -64,7 +64,6 @@
             <div
               class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6 mb-8"
             >
-              <!-- Update all links to use URL parameters -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
               >
