--- a/index.html
+++ b/index.html
@@ -733,6 +733,76 @@
           <br />
           <br />
 
+          <!-- Experience Section -->
+          <div class="mt-20">
+            <h2 class="text-3xl font-bold mb-8 text-center">
+              📂 Experience & Leadership
+            </h2>
+
+            <div class="max-w-4xl mx-auto relative flex">
+              <!-- LEFT COLUMN: Year Labels + Timeline -->
+              <div class="relative w-28">
+                <!-- Year labels -->
+                <div
+                  class="absolute left-[-12px] top-0 bottom-0 flex flex-col justify-between text-gray-500"
+                >
+                  <span>Jan 2023</span>
+                  <span>Jan 2024</span>
+                  <span>Jan 2025</span>
+                  <span>Jan 2026</span>
+                </div>
+
+                <!-- Gray vertical spine -->
+                <div
+                  class="absolute left-20 top-0 bottom-0 w-2 bg-gray-300 rounded-full"
+                ></div>
+              </div>
+
+              <!-- RIGHT COLUMN: Bars + Descriptions -->
+              <div class="relative flex-1 ml-14" style="height: 500px">
+                <!-- ===== Treasurer (starts Nov 2024 ≈ 58%) ===== -->
+                <div
+                  class="absolute w-2 bg-green-500 rounded-full"
+                  style="top: 58%; height: 42%; left: 0"
+                ></div>
+
+                <div class="absolute" style="top: 58%; left: 16px">
+                  <h3 class="text-xl font-semibold text-green-500">
+                    Treasurer – Sigma Phi Delta Fraternity
+                  </h3>
+                  <p class="text-sm text-gray-500 mt-1">Nov 2024 – Present</p>
+                  <p class="text-sm text-gray-400 mt-2">
+                    Managed dues collection, budgeting, accounting, and roster.
+                  </p>
+                </div>
+
+                <!-- ===== DevOps Engineer (starts Sep 2025 ≈ 82%) ===== -->
+                <div
+                  class="absolute w-2 bg-blue-500 rounded-full"
+                  style="top: 82%; height: 18%; left: 30px"
+                ></div>
+
+                <div class="absolute" style="top: 82%; left: 56px">
+                  <h3 class="text-xl font-semibold text-blue-500">
+                    DevOps Engineer – App Dev Club
+                  </h3>
+                  <p class="text-sm text-gray-500 mt-1">Sep 2025 – Present</p>
+                  <p class="text-sm text-gray-400 mt-2">
+                    Containerized a Flask + React web application for the
+                    Children's National Hospital.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+          <br />
+
           <!-- GitHub Analytics -->
           <div>
             <h2 class="text-3xl font-bold mb-6 text-center">
