--- a/index.html
+++ b/index.html
@@ -739,14 +739,14 @@
               📂 Experience & Leadership
             </h2>
 
-            <div class="max-w-4xl mx-auto relative flex">
-              <!-- LEFT COLUMN: Year Labels + Timeline -->
+            <!-- SHIFT RIGHT (Option B) -->
+            <div class="max-w-4xl relative flex ml-[20%]">
+              <!-- LEFT COLUMN -->
               <div class="relative w-28">
-                <!-- Year labels -->
                 <div
                   class="absolute left-[-12px] top-0 bottom-0 flex flex-col justify-between text-gray-500"
                 >
-                  <span>Jan 2023</span>
+                  <!-- Removed Jan 2023 -->
                   <span>Jan 2024</span>
                   <span>Jan 2025</span>
                   <span>Jan 2026</span>
@@ -758,15 +758,15 @@
                 ></div>
               </div>
 
-              <!-- RIGHT COLUMN: Bars + Descriptions -->
+              <!-- RIGHT COLUMN -->
               <div class="relative flex-1 ml-14" style="height: 500px">
-                <!-- ===== Treasurer (starts Nov 2024 ≈ 58%) ===== -->
+                <!-- Treasurer (Nov 2024 – Present) -->
                 <div
                   class="absolute w-2 bg-green-500 rounded-full"
-                  style="top: 58%; height: 42%; left: 0"
+                  style="top: 42%; height: 58%; left: 0"
                 ></div>
 
-                <div class="absolute" style="top: 58%; left: 16px">
+                <div class="absolute" style="top: 42%; left: 16px">
                   <h3 class="text-xl font-semibold text-green-500">
                     Treasurer – Sigma Phi Delta Fraternity
                   </h3>
@@ -776,13 +776,13 @@
                   </p>
                 </div>
 
-                <!-- ===== DevOps Engineer (starts Sep 2025 ≈ 82%) ===== -->
+                <!-- DevOps Engineer (Sep 2025 – Present) -->
                 <div
                   class="absolute w-2 bg-blue-500 rounded-full"
-                  style="top: 82%; height: 18%; left: 30px"
+                  style="top: 83%; height: 17%; left: 30px"
                 ></div>
 
-                <div class="absolute" style="top: 82%; left: 56px">
+                <div class="absolute" style="top: 83%; left: 56px">
                   <h3 class="text-xl font-semibold text-blue-500">
                     DevOps Engineer – App Dev Club
                   </h3>
