--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
                   </h3>
                   <p class="text-sm text-gray-500 mt-1">Nov 2024 – Present</p>
                   <p class="text-sm text-gray-400 mt-2">
-                    Managed dues collection, budgeting, accounting, and roster.
+                    Managed dues collection, budgeting, accounting, and roster
                   </p>
                 </div>
 
@@ -788,8 +788,8 @@
                   </h3>
                   <p class="text-sm text-gray-500 mt-1">Sep 2025 – Present</p>
                   <p class="text-sm text-gray-400 mt-2">
-                    Containerized a Flask + React web application for the
-                    Children's National Hospital.
+                    Containerized a full stack web application and automated
+                    CI/CD pipelines
                   </p>
                 </div>
               </div>
