tweaked education tile animations

--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                 </div>
 
                 <div class="course-tile cs-course">
-                  <h4 class="font-semibold">Computer/Network Security</h4>
+                  <h4 class="font-semibold">Computer & Network Security</h4>
                   <p class="text-sm text-gray-400 mt-1">
                     Attacks, encryption, authentication
                   </p>
