tweaked course tiles

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                 <div class="course-tile cs-course">
                   <h4 class="font-semibold">Networks</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Protocols, internet, OSI model, subnetting
+                    Protocols, OSI model, subnetting, the internet
                   </p>
                 </div>
 
@@ -606,21 +606,21 @@
                 <div class="course-tile cs-course">
                   <h4 class="font-semibold">Computer Systems</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Low-level system architecture
+                    Low-level system architecture, C, Assembly
                   </p>
                 </div>
 
                 <div class="course-tile cs-course">
                   <h4 class="font-semibold">Object-Oriented Programming</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    OOP principles and design
+                    OOP principles and design, Java
                   </p>
                 </div>
 
                 <div class="course-tile cs-course">
                   <h4 class="font-semibold">Data Structures</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Fundamental data organization
+                    Fundamental data organization, Java
                   </p>
                 </div>
 
@@ -643,14 +643,14 @@
                     Organization of Programming Languages
                   </h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Syntax, semantics, automata
+                    Syntax, semantics, automata, lambda calculus, OCaml, Rust
                   </p>
                 </div>
 
                 <div class="course-tile cs-course">
                   <h4 class="font-semibold">Data Science</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Data analysis, data mining, and machine learning
+                    Data analysis, machine learning, neural networks
                   </p>
                 </div>
 
