--- a/index.html
+++ b/index.html
@@ -161,19 +161,19 @@
                       >Nmap</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Gobuster</span
-                    >
-                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Hydra</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Burpsuite</span
+                      >Gobuster</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >tcpdump</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Wireshark</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Metasploit</span
+                      >Burpsuite</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >VMware</span
@@ -185,10 +185,13 @@
                   <h3 class="text-xl font-semibold mb-2">Dev Tools</h3>
                   <div class="flex flex-wrap gap-2">
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >VSCode</span
+                      >GitHub</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >GitHub</span
+                      >Docker</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >VSCode</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Unity</span
@@ -208,6 +211,12 @@
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Dune</span
                     >
+                  </div>
+                </div>
+
+                <div>
+                  <h3 class="text-xl font-semibold mb-2">Libraries</h3>
+                  <div class="flex flex-wrap gap-2">
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >BreezySwing</span
                     >
@@ -606,21 +615,21 @@
                 <div class="course-tile cs-course">
                   <h4 class="font-semibold">Computer Systems</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Low-level system architecture, C, Assembly
+                    Low-level system architecture
                   </p>
                 </div>
 
                 <div class="course-tile cs-course">
                   <h4 class="font-semibold">Object-Oriented Programming</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    OOP principles and design, Java
+                    OOP principles and design
                   </p>
                 </div>
 
                 <div class="course-tile cs-course">
                   <h4 class="font-semibold">Data Structures</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Fundamental data organization, Java
+                    Fundamental data organization
                   </p>
                 </div>
 
@@ -643,7 +652,7 @@
                     Organization of Programming Languages
                   </h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Syntax, semantics, automata, lambda calculus, OCaml, Rust
+                    Syntax, semantics, automata, lambda calculus
                   </p>
                 </div>
 
