updated about me with app dev

--- a/aboutme.html
+++ b/aboutme.html
@@ -145,9 +145,11 @@
               treasurer has taught me many invaluable skills such as teamwork,
               communication, and leadership.
               <br /><br />
-              I even developed a Python auto-messenger to automate the process
-              of communicating financial information, as I got quite sick of
-              copy and pasting messages to 70+ members!
+              I am also part of the App Development Club where I serve as the
+              DevOps Engineer for the Children's National Hospital project. Our
+              product is a MRI scan analysis web application that harnesses
+              machine learning to give unique insights into scans of the brain,
+              revealing tumors and other anomalies.
               <br /><br />
               The University of Maryland and SigPhi are my happy places, and I
               love all of my friends and acquaintances who make every day worth
