minor fixes to about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -140,12 +140,12 @@
               I decided to continue my pursuit of computer science at UMD with a
               focus on cybersecurity.
               <br /><br />
-              At UMD I am part of the Sigma Phi Delta Engineering Fraternity,
+              At UMD I am part of the Sigma Phi Delta Engineering Fraternity
               where I serve as the treasurer of the executive board. Being
               treasurer has taught me many invaluable skills such as teamwork,
               communication, and leadership.
               <br /><br />
-              I am also part of the App Development Club where I serve as the
+              I am also part of the App Development Club where I serve as a
               DevOps Engineer for the Children's National Hospital project. Our
               product is a MRI scan analysis web application that harnesses
               machine learning to give unique insights into scans of the brain,
